<resources>
    <string name="app_name">Amplify</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_description">Description</string>

    <!-- Welcome Activity (Hero Page) -->
    <string name="logo">"\"Logo\""</string>
    <string name="banner">"for people"</string>
    <string name="develop">"Develop by"</string>
    <string name="title_activity_login">Login</string>

    <!--/////////////////////////////////////////////////////////////-->

    <!-- Description Activity -->
    <string name="description_intro">"What is Amplify?"</string>
    <string name="description_body">"Amplify is an application to connect and share your preferences. Discover new music and places to go. How does it work?"</string>
    <string name="description_step1"> 1.First configure your musical preferences. </string>
    <string name="description_step2"> 2.Second connect to an Amplify site.</string>
    <string name="description_step3"> 3.Third enjoy! It is really that easy!  </string>
    <string name="description_step4"> Don\'t forget to discover new places around you and add music to favourites.</string>
    <string name="description_button_next">Start using Amplify!</string>



    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--/////////////////////////////////////////////////////////////-->


    <!-- LoginActivity -->
    <string name="login">Login</string>
    <string name="login_email">Email:</string>
    <string name="login_password">Password:</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_new">Create acount</string>
    <string name="login_terms">Terms &amp; Conditions</string>




    <!-- SetSelfDataActivity -->
    <string name="set_self_data_hey">Hey!</string>
    <string name="set_self_data_message">Give something about your self?</string>
    <string name="set_self_data_name">Name:</string>
    <string name="set_self_data_age">Age:</string>
    <string name="set_self_data_sex">Sex:</string>
    <string name="set_self_data_location">Location:</string>
    <string name="set_self_data_next_button">Next</string>
    <string-array name="set_self_data_sexs">
        <item>Male</item>
        <item>Female</item>
        <item>Alien</item>
        <item>Others</item>
    </string-array>
    <string-array name="set_self_data_locations">
        <item>Lleida</item>
        <item>Balaguer</item>
        <item>Oliana</item>
        <item>Guisona</item>
        <item>La Seu</item>
    </string-array>

    <!--/////////////////////////////////////////////////////////////-->


    <!-- SetGenresActivity -->
    <string name="set_genres_title">Choose your favorite genres</string>
    <string name="set_genres_next_button">Save</string>
    <string-array name="set_genres_genres">
        <item>Classic</item>
        <item>Blues</item>
        <item>Jazz</item>
        <item>Rock</item>
        <item>Gospel</item>
        <item>Soul</item>
        <item>Metal</item>
        <item>Country</item>
        <item>Funk</item>
        <item>Disco</item>
        <item>House</item>
        <item>Techno</item>
        <item>Pop</item>
        <item>Ska</item>
        <item>Reggae</item>
        <item>Hip Hop</item>
        <item>Garage</item>
        <item>Flamenco</item>
        <item>Raggaeton</item>
    </string-array>

    <!--/////////////////////////////////////////////////////////////-->


    <!-- RegisterActivity -->
    <string name="register">Register</string>
    <string name="register_email">Email:</string>
    <string name="register_password">Password:</string>
    <string name="register_repeat_password">Repeat Password:</string>
    <string name="register_next_button">Next</string>


    <!--/////////////////////////////////////////////////////////////-->


    <!--Terms & Conditions-->
    <string name="TermsAndConditionsTitle">Terms &amp; Conditions</string>
    <string name="TermsAndConditionsText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    \n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    \n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    \n\n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
    </string>

    <!--/////////////////////////////////////////////////////////////-->



    <!-- Main Activity - General -->
    <string name="title_discover">Discover</string>
    <string name="title_amplify_site">Amplify Site</string>
    <string name="title_profile">Profile</string>

    <!--/////////////////////////////////////////////////////////////-->

    <!-- Discover Fragment -->

    <!--nearby establishment-->
    <string name="title_nearby_establishments">Establishments nearby</string>
    <!--cardView & detail-->
    <string name="name_establishment">Name Establishment</string>
    <string name="info_establishment">Info Establishment</string>
    <string name="image_desc">Image Description</string>
    <string name="description_info_establishment">Text description</string>
    <string name="genres_of_this_establishment">Genres of this establishment</string>
    <string name="genre">Genre 1</string>
    <string name="genre_2">Genre 2</string>
    <string name="most_voted_songs_in_this_establishment">Most voted songs in this establishment</string>

    <!-- fav genres in your city-->
    <string name="favourite_genres_in_your_city">Favourite genres in your city</string>
    <string name="genre_fav_1">Genre 1</string>
    <string name="genre_fav_2">Genre 2</string>
    <string name="genre_fav_3">Genre 3</string>



    <!-- Most voted songs -->
    <string name="mostVotSong">Most voted songs</string>
    <!-- song detail -->
    <string name="song_name">Song name</string>
    <string name="artist_name">Artist name</string>
    <string name="album_name">Album name</string>
    <string name="genresSong">Genres</string>
    <string name="addFav">add to Fav</string>
    <string name="similar_songs">Similar Songs</string>
    <string name="description_song">description song</string>

    <!--/////////////////////////////////////////////////////////////-->


    <!-- Amplify Site Fragment -->
    <string name="name_local">Local 1</string>
    <string name="active">Amplify Active</string>
    <string name="listening">Song Listening…</string>
    <!--added properties of song detail-->
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <!--added button addFav-->
    <!--added similar songs-->

    <!--/////////////////////////////////////////////////////////////-->

    <!--Profile Fragment-->
    <string name="fav_song_but">My favourite songs</string>
    <string name="desc_fav">favorite desc</string>
    <string name="account_title">Account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change password</string>
    <string name="modify_gen">Modify your favourites genres of musics</string>
    <string name="notifications">Notifications</string>
    <string name="app_notifications">App notifications</string>
    <string name="privacity">Privacity</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="log_out">Log Out</string>

    <string name="cancel_but">Cancel</string>
    <string name="save_but">Save</string>

    <!--Favourite song List-->
    <string name="title_list_fav">My favourites songs</string>
    <string name="name_song_fav">Name song</string>
    <string name="artist_name_fav">Artist name</string>
    <string name="album_name_fav">Album name</string>

    <!-- Edit Profile-->
    <string name="title_edit_prof">Edit Profile</string>


    <!-- Change Password-->
    <string name="change_pass">Change Password</string>
    <string name="actual_password">Actual password :</string>
    <string name="new_password">New password :</string>
    <string name="repeat_new_password">Repeat new password :</string>

    <!--Modify Genres-->
    <string name="mod_genres">Modify genres of music</string>


</resources>
