<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fav_gen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/favourite_genres_in_your_city"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gen1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/genre_fav_1"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/fav_gen"
        app:layout_constraintTop_toBottomOf="@+id/fav_gen" />

    <TextView
        android:id="@+id/gen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre_fav_2"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/gen1"
        app:layout_constraintTop_toBottomOf="@+id/fav_gen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/genre_fav_3"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/gen2"
        app:layout_constraintTop_toBottomOf="@+id/fav_gen" />


</android.support.constraint.ConstraintLayout>