<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".register.RegisterActivity">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="32sp"
            android:textStyle="bold"
            android:paddingTop="30dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_email"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="80dp"
            android:paddingBottom="10dp"
        />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/shape"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/shape"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_repeat_password"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="24sp"
            android:textStyle="bold"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:background="@drawable/shape"
            android:paddingTop="10dp"
            android:paddingLeft="20dp"
        />
        <Button
            android:id="@+id/register_next_button"
            style="?android:textAppearanceSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_next_button"
            android:textStyle="bold"
            android:layout_gravity="end"
            android:background="@drawable/shape"
        />
</LinearLayout>