<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ChangePasswordActivity">

    <TextView
        android:id="@+id/titleChangePss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:text="@string/change_pass"
        android:textColor="@color/darkGrey"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/actual_password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleChangePss" />

    <EditText
        android:id="@+id/actual_pass_edit"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/Change_password"
        app:layout_constraintTop_toBottomOf="@+id/Change_password" />

    <TextView
        android:id="@+id/New_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/new_password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/actual_pass_edit"
        app:layout_constraintTop_toBottomOf="@+id/actual_pass_edit" />

    <EditText
        android:id="@+id/new_pass_edit"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/New_password"
        app:layout_constraintTop_toBottomOf="@+id/New_password" />

    <TextView
        android:id="@+id/Repeat_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/repeat_new_password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/new_pass_edit"
        app:layout_constraintTop_toBottomOf="@+id/new_pass_edit" />

    <EditText
        android:id="@+id/rep_new_pass_edit"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape"
        android:imeActionId="6"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="@+id/Repeat_pass"
        app:layout_constraintTop_toBottomOf="@+id/Repeat_pass" />

    <Button
        android:id="@+id/cancel_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/cancel_but"
        app:layout_constraintStart_toStartOf="@+id/rep_new_pass_edit"
        app:layout_constraintTop_toBottomOf="@+id/rep_new_pass_edit" />

    <Button
        android:id="@+id/save_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:text="@string/save_but"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancel_but" />



</android.support.constraint.ConstraintLayout>